Simplify ScrollBoundaryBehavior logic with railed delta.

Currently, we decide whether to propagate a scroll by looking at the dominant
axis of the scroll, and see if scroll-boundary-behavior prevents the
propagation in that direction. This brings complexity to the code, and
confusions to the user, but was a compromise because railing wasn't present in
GestureScrollBegin.

Now we have railing in GestureScrollBegin(r492983), so any scroll_delta passed
to the renderer is a non-trival scroll and should be taken into account. This
patch prevents the scroll being propagated if the scroll has any delta on the
direction prevented by scroll-boundary-behavior.

Bug: 754397
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Ie0a0681a0d6e515adc6f2e28ccf482cf13b70771
Reviewed-on: https://chromium-review.googlesource.com/611092
Reviewed-by: David Bokan <bokan@chromium.org>
Reviewed-by: Ali Juma <ajuma@chromium.org>
Commit-Queue: Sandra Sun <sunyunjia@chromium.org>
Cr-Commit-Position: refs/heads/master@{#496483}
Former-commit-id: c6339c08822ef7cc2cf305126125ed86b1b9078e